--- a/index.html
+++ b/index.html
@@ -1172,6 +1172,30 @@
             this.src = 'https://via.placeholder.com/400x250?text=Image+Not+Found';
         };
     });
+
+    // --- CONTACT FORM HANDLING ---
+    const contactForm = document.querySelector('#contact form');
+    if (contactForm) {
+        contactForm.addEventListener('submit', function(e) {
+            e.preventDefault();
+            // Get form values
+            const name = contactForm.querySelector('#name').value.trim();
+            const email = contactForm.querySelector('#email').value.trim();
+            const subject = contactForm.querySelector('#subject').value.trim();
+            const message = contactForm.querySelector('#message').value.trim();
+            // Simple validation
+            if (!name || !email || !subject || !message) {
+                alert('Please fill in all fields.');
+                return;
+            }
+            // Simulate sending (AJAX or backend integration needed for real email)
+            contactForm.reset();
+            contactForm.innerHTML = `<div class='text-center py-8'>
+                <h3 class='text-xl font-bold mb-4' data-lang-en='Thank you for contacting us!' data-lang-fr='Merci de nous avoir contactés !'>Thank you for contacting us!</h3>
+                <div class='mb-2' data-lang-en='We have received your message and will get back to you soon.' data-lang-fr='Nous avons bien reçu votre message et nous vous répondrons bientôt.'>We have received your message and will get back to you soon.</div>
+            </div>`;
+        });
+    }
     </script>
 </body>
 </html>
