--- a/index.html
+++ b/index.html
@@ -906,7 +906,12 @@
                 
                 <!-- Contact Form -->
                 <div>
-                    <form class="bg-white dark:bg-gray-800 rounded-lg shadow-lg p-8" action="https://formspree.io/f/mnqekzqg" method="POST" target="_blank">
+                    <form class="bg-white dark:bg-gray-800 rounded-lg shadow-lg p-8" action="https://formspree.io/f/movdplzj" method="POST" id="contact-form">
+                        <!--
+                          IMPORTANT: Replace YOUR_FORMSPREE_HASHID above with your real Formspree form hashid.
+                          Example: https://formspree.io/f/abcd1234
+                          You get this after creating a form at https://formspree.io/ and setting your recipient email.
+                        -->
                         <div class="mb-4">
                             <label for="name" class="block text-sm font-medium mb-2" data-lang-en="Your Name" data-lang-fr="Votre Nom">Your Name</label>
                             <input type="text" id="name" name="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 dark:bg-gray-700 dark:border-gray-600" required>
@@ -927,6 +932,7 @@
                             <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-500 dark:bg-gray-700 dark:border-gray-600" required></textarea>
                         </div>
                         
+                        <input type="hidden" name="_replyto" value="mdsolutions008@gmail.com">
                         <button type="submit" class="btn-primary w-full py-3 rounded-lg font-medium text-white" data-lang-en="Send Message" data-lang-fr="Envoyer le Message">Send Message</button>
                     </form>
                 </div>
@@ -1171,6 +1177,31 @@
         img.onerror = function() {
             this.src = 'https://via.placeholder.com/400x250?text=Image+Not+Found';
         };
+    });
+
+    // --- CONTACT FORM SUBMISSION USING AJAX ---
+    document.addEventListener('DOMContentLoaded', function() {
+        const contactForm = document.getElementById('contact-form');
+        if (contactForm) {
+            contactForm.addEventListener('submit', function(e) {
+                e.preventDefault(); // Prevent default form submission
+                const formData = new FormData(contactForm);
+                fetch(contactForm.action, {
+                    method: 'POST',
+                    body: formData,
+                    headers: { 'Accept': 'application/json' }
+                })
+                .then(response => {
+                    // Show thank you message, clear form, and redirect to home
+                    contactForm.reset();
+                    window.location.hash = '#home';
+                    alert('Thank you for contacting us! We will get back to you soon.');
+                })
+                .catch(error => {
+                    alert('Sorry, there was an error sending your message. Please try again later.');
+                });
+            });
+        }
     });
     </script>
 </body>
